--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
 
-                    <h1 class="mbr-section-title display-1">Brown Hack Health 2016</h1>
+                    <h1 class="mbr-section-title display-1">Brown Hack Health 2017</h1>
                     <p class="mbr-section-lead lead"><span style="font-style: normal;">A <strong>new kind of hackathon</strong> that aims to create solutions to medical problems and barriers. This weekend is your opportunity to work with <strong>fellow designers, engineers, developers, physicians, artists, entrepreneurs, mentors, and others</strong> to help develop tools that could change the worlds of medicine and health.</span><br></p>
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.16 - SUN 09.18.16</a> <a class="btn btn-lg btn-danger" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register to Participate</a>
                     <a class="btn btn-lg btn-danger" href="/hackathon.pdf">Information for Participants</a>
@@ -105,7 +105,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Keynote Speaker</span>&nbsp;<span style="color: inherit; font-size: 3rem; line-height: 1.1;">JOHN SCULLEY '61</span></h3>
+                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Keynote Speaker 2016</span>&nbsp;<span style="color: inherit; font-size: 3rem; line-height: 1.1;">JOHN SCULLEY '61</span></h3>
                 
             </div>
         </div>
