--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
                     <h1 class="mbr-section-title display-1">Brown Hack Health 2017</h1>
                     <p class="mbr-section-lead lead"><span style="font-style: normal;">A <strong>new kind of hackathon</strong> that aims to create solutions to medical problems and barriers. This weekend is your opportunity to work with <strong>fellow designers, engineers, developers, physicians, artists, entrepreneurs, mentors, and others</strong> to help develop tools that could change the worlds of medicine and health.</span><br></p>
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.15.17 - SUN 09.17.17</a> <a class="btn btn-lg btn-danger" href="https://goo.gl/forms/JglaNTNkqyHataaJ3">Register to Participate</a>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.15.17 - SUN 09.17.17</a> <a class="btn btn-lg btn-danger" href="https://docs.google.com/a/brown.edu/forms/d/e/1FAIpQLSda9pGcq43BSnHNFjmiWhgVTO-SQIDt1ZGZ2nuXspYvHqBGWg/viewform">Register to Participate</a>
                     <a class="btn btn-lg btn-danger" href="/hackathon.pdf">Information for Participants</a>
-                    <a class="btn btn-lg btn-danger" href="http://doodle.com/poll/rerif2sgxkug7brv">Register to Mentor</a>
+                    <a class="btn btn-lg btn-danger" href="https://docs.google.com/a/brown.edu/forms/d/e/1FAIpQLSceo3lpXVyPLV0aOyAYLMiwlZPpk7XnztsXc_uCFO4QDe7qGQ/viewform">Register to Mentor</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://drive.google.com/open?id=0BxYj9V3WO73BODJlYUdTZXh6SlU">Top 20 Problems in Providence</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1NLG8kqNIBscA2uELVyiqVQK0icYox5-WYcKrILvkvYI/edit?usp=sharing">Pitched Problems</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/YqmCDwnYODbWGXly2">Register Your Team</a>
