--- a/aboutus.html
+++ b/aboutus.html
@@ -135,7 +135,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/Shivam.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/Shiv.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Shivam Gandhi, ’20</h4>
                         <h5 class="card-subtitle">Judges and Mentors Co-Chair</h5>
@@ -148,7 +148,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 80px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/Brett.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/Brett.jpg" class="card-img-top"></div>
                     <div class="card-block">
                         <h4 class="card-title">Brett Halperin, ’18</h4>
                         <h5 class="card-subtitle">Finance Chair</h5>
@@ -169,7 +169,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-2" style="padding-top: 40px; padding-bottom: 0px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><img src="assets/images/Nate.png" class="card-img-top"></div>
+                  <div class="card-img"><img src="assets/images/NateP.jpg" class="card-img-top"></div>
                   <div class="card-block">
                     <h4 class="card-title">Nate Pertsch, MD ’20</h4>
                     <h5 class="card-subtitle">Judges and Mentors Co-Chair</h5>
