--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
-                <h3 class="mbr-section-title display-2">Providence RI</h3>
-                <div class="lead"><p>is affected by overcrowded emergency departments and overburded hospital resources. We propose to alleviate these problems by improving the management of chronic diseases, such as obesity and diabetes, and providing more affordable, continuous care to everyone in Providence, including the uninsured, underinsured, and underserved populations.</p><p><span style="font-size: 1.07rem; line-height: 1.5;">In 24h of developing fast prototypes for healthcare issues, we can make strides towards impacting our local Providence community and other communities nationwide.</span><br></p></div>
+                <h3 class="mbr-section-title display-2">Health disparities</h3>
+                <div class="lead"><p> in Providence and across the United States are measured by analysis of treatment protocols and outcomess by race, income, gender, and other factors, and the information shows a stark contrast between the best treated and worst treated groups.</p><p><span style="font-size: 1.07rem; line-height: 1.5;">In 24h of developing fast prototypes for healthcare issues, we can make strides towards eliminating disparities in our local community and other communities nationwide.</span><br></p></div>
                 
             </div>
         </div>
