--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Keynote Speaker 2016</span>&nbsp;<span style="color: inherit; font-size: 3rem; line-height: 1.1;">John Sculley III '61</span></h3>
+                <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">Keynote Speaker 2017</span>&nbsp;<span style="color: inherit; font-size: 3rem; line-height: 1.1;">John Sculley III '61</span></h3>
                 
             </div>
         </div>
@@ -116,7 +116,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>John Sculley III, Brown alum ‘61, former CEO of Apple and former President of PepsiCo, (pictured center) will be attending Brown Hack Health 2016 as the keynote speaker. His involvement in technological and now healthcare innovation, especially in telemedicine, will provide great insight into tackling healthcare issues presented at the hackathon. Some of his work in healthcare technology currently include co-founding Misfit Wearables and serving as vice-chairman of MDLive.</p></div>
+            <div class="col-xs-12 lead"><p>Rajiv Kumar, Brown alum '05 MD'11, will be attending Brown Hack Health 2017 as the keynote speaker. While attending Brown’s Warren Alpert Medical School in 2006, Dr. Kumar co-founded ShapeUp, a wellness company that leveraged social connections to enhance employee health. As CEO, he led the growth of ShapeUp from a two person start-up to a global company which was acquired by <a href=https://www.virginpulse.com/>Virgin Pulse</a> in 2016 and had over 2 million participants. Currently the Chief Medical Officer of Virgin Pulse and President of Virgin Pulse Institute, Dr. Kumar’s focus on health innovation will set the tone for Brown Hack Health 2017.</p></div>
         </div>
     </div>
 
