--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7">
-                  <div class="mbr-figure"><img src="assets/RajivKumar"></div>
+                  <div class="mbr-figure"><img src="assets/images/RajivKumar"></div>
               </div>
 
               
