--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
                 <div class="card cart-block">
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-wine mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
                     <div class="card-block">
-                        <h4 class="card-title">Friday Warm-Up</h4>
-                        <h5 class="card-subtitle">9/15<br>Sponsored by the Brown Center for Biomedical Engineering</h5>
+                        <h4 class="card-title">Friday Warm-Up<br>Sponsored by the Brown Center for Biomedical Engineering</h4>
+                        <h5 class="card-subtitle">9/15</h5>
                         <p class="card-text">5:30PM — Check-In &amp; Reception w/ Refreshments<br>6:30PM — Hackathon Description<br>6:45 - Message from Sponsor<br>7:00PM — Keynote Speaker: Dr. Rajiv Kumar<br>8:00PM — Networking Night<br><br>* Schedule subject to change<br><br><br></p>
                         
                     </div>
