--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                         <h5 class="card-subtitle">9/16</h5>
                         <p class="card-text">8:00AM — Breakfast &amp; Check-In<br>8:25 AM - Hack 101<br>
 
-                        8:45AM — Problem Pitching<br>9:30AM — Team Formation<br>10:00AM — Hacking Begins<br>10:30 AM - Workshop: Persuasive Communication<br>12:00PM — Lunch<br><em>Hacking Continues</em>
-                        <br>5:00PM — Dinner - Sponsored by Pizza Pie-er<br>www.pizzapie-er.com<br>Hacking Continues<br>11:00PM — End of Day 1<br></p>
+                        8:45AM — Problem Pitching<br>9:30AM — Team Formation<br>10:00AM — Hacking Begins<br>10:30 AM - Workshop: Persuasive Communication<br>12:00PM — Lunch<br>1:00PM - Hacking Continues
+                        <br>5:00PM — Dinner - Sponsored by <a href=www.pizzapie-er.com/>Pizza Pie-er</a><br>Hacking Continues<br>11:00PM — End of Day 1<br></p>
                         
                     </div>
                 </div>
