--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <a class="btn btn-lg btn-danger" href="https://docs.google.com/a/brown.edu/forms/d/e/1FAIpQLSceo3lpXVyPLV0aOyAYLMiwlZPpk7XnztsXc_uCFO4QDe7qGQ/viewform">Register to Mentor</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://drive.google.com/open?id=0BxYj9V3WO73BODJlYUdTZXh6SlU">Top 20 Problems in Providence</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1NLG8kqNIBscA2uELVyiqVQK0icYox5-WYcKrILvkvYI/edit?usp=sharing">Pitched Problems</a>
-                    <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/YqmCDwnYODbWGXly2">Register Your Team</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="">Register Your Team</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="">Sign Up for Pitch Practice</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/vkH6CgFHcBqrgqfu2">Submit Presentation Draft by 12:00PM</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1yW22fs611OU8Kbbi5Wz5sUkAud5aQ_QwzUSDlC25EyU/edit?usp=sharing">SUNDAY SLIDES</a>
