--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.15.17 - SUN 09.17.17</a> <a class="btn btn-lg btn-danger" href="https://docs.google.com/a/brown.edu/forms/d/e/1FAIpQLSda9pGcq43BSnHNFjmiWhgVTO-SQIDt1ZGZ2nuXspYvHqBGWg/viewform">Register to Participate</a>
                     <a class="btn btn-lg btn-danger" href="/hackathon.pdf">Information for Participants</a>
                     <a class="btn btn-lg btn-danger" href="https://docs.google.com/a/brown.edu/forms/d/e/1FAIpQLSceo3lpXVyPLV0aOyAYLMiwlZPpk7XnztsXc_uCFO4QDe7qGQ/viewform">Register to Mentor</a>
-                    <a class="btn btn-lg btn-black-outline btn-black" href="https://drive.google.com/open?id=0BxYj9V3WO73BODJlYUdTZXh6SlU">Top 20 Problems in Providence</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1jiARQaaYd13VPoo04Kbr-sLy-p1fFhkpVM1jFEwEF0Q/edit#slide=id.g254da0057a_0_18">Hacking 101</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1NLG8kqNIBscA2uELVyiqVQK0icYox5-WYcKrILvkvYI/edit?usp=sharing">Pitched Problems</a>
-                    <a class="btn btn-lg btn-black-outline btn-black" href="">Register Your Team</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/forms/d/e/1FAIpQLSeda5Worz0VMFs4B61f-CHln2uw4gkqeUxtYUqhMXgVk3P5Rg/viewform?usp=sf_link">Register Your Team</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="">Sign Up for Pitch Practice</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/vkH6CgFHcBqrgqfu2">Submit Presentation Draft by 12:00PM</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1yW22fs611OU8Kbbi5Wz5sUkAud5aQ_QwzUSDlC25EyU/edit?usp=sharing">SUNDAY SLIDES</a>
