--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7">
-                  <div class="mbr-figure"><img src="assets/images/Kumar.jpg"></div>
+                  <div class="mbr-figure"><img src="assets/images/Capraro Smile Stethoscope Near ED.jpg"></div>
               </div>
 
               
@@ -157,7 +157,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>Image credit: Rajiv Kumar</p></div>
+            <div class="col-xs-12 lead"><p>Image credit: Geoff Capraro</p></div>
         </div>
     </div>
 
