--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                         <h4 class="card-title">Sponsor</h4>
                         
                         <p class="card-text">Support us on our endeavors, and we'll help spread the word about you!&nbsp;</p>
-                        <div class="card-btn"><a href="https://docs.google.com/document/d/1prjRT3aX8krKOr6Ov4V4kCswYd0aXXogUh_jcG1reKo/edit?usp=sharing" class="btn btn-danger">Sponsorship Deck</a></div>
+                        <div class="card-btn"><a href="https://drive.google.com/file/d/1N9kJgCTze5vyh4YEhnVW68KJn0yysuje/view?usp=sharing" class="btn btn-danger">Sponsorship Deck</a></div>
                     </div>
                 </div>
             </div>
