--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left">
-                  <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">"There has never been a better time to be an innovator in the health care</span> space. Technology is powering massive disruption in an<span style="font-weight: normal;"> antiquated industry, and this represents an opportunity for bold and creative </span>people to make positive change for billions of people around the world.<span style="font-weight: normal;">" —RK</span></h3>
+                  <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">"The NaloxBox mission is to improve the capacity of bystander rescuers to save the lives of victims of opioid overdose by strategically placing these innovative smart cabinets in settings most in need of quickly accessible, public use naloxone.">" —NaloxBox website</span></h3>
                   
 
                   
