--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7">
-                <div class="mbr-figure"><img src="assets/PHOTOHERE"></div>
+                <div class="mbr-figure"><img src="assets/Capraroheadshot.jpg"></div>
               </div>
 
               
