--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-wine mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
                     <div class="card-block">
                         <h4 class="card-title">Friday Warm-Up<br>Featuring the Charles O. Cooke M.D. Distinguished Visiting Lectureship</h4>
-                        <h5 class="card-subtitle">9/14</h5>
+                        <h5 class="card-subtitle">9/14 | Engineering Research Center</h5>
                         <p class="card-text">5:30PM — Check-In &amp; Reception w/ Refreshments<br>6:30PM — Hackathon Description and Message about the Cooke Lectureship<br>7:00PM — Keynote Address: The Charles O. Cooke M.D. Distinguished Visiting Lectureship delivered by Dr. Geoffrey Capraro<br>8:00PM — Networking Night<br><br>* Schedule subject to change<br><br><br></p>
                         
                     </div>
@@ -297,7 +297,7 @@
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-tools mbr-iconfont mbr-iconfont-features4" style="font-size: 50px; color: black;"></a></div>
                     <div class="card-block">
                         <h4 class="card-title">Saturday All-Day</h4>
-                        <h5 class="card-subtitle">9/15</h5>
+                        <h5 class="card-subtitle">9/15 | Friedman Hall</h5>
                         <p class="card-text">8:00AM — Breakfast &amp; Check-In<br>8:25 AM - Hack 101<br>
 
                         8:45AM — Problem Pitching<br>9:30AM — Team Formation<br>10:00AM — Hacking Begins<br>12:00PM — Lunch<br>1:00PM - Hacking Continues
@@ -313,7 +313,7 @@
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-presentation mbr-iconfont mbr-iconfont-features4" style="color: black;"></a></div>
                     <div class="card-block">
                         <h4 class="card-title">Sunday Home Stretch</h4>
-                        <h5 class="card-subtitle">9/16</h5>
+                        <h5 class="card-subtitle">9/16 | Friedman Hall</h5>
                         <p class="card-text">8:30AM — Breakfast<br><em>Hacking Continues</em><br>12:15PM — Lunch<br>12:30PM - Draft Presentations Due (Link on Website)<br>Hacking Continues<br>2:00PM — Pitch Presentations<br>3:30PM — Judging<br>4:00PM — Awards</p>
                         
                     </div>
