--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09.14.18 - SUN 09.16.18</a> <a class="btn btn-lg btn-danger" href="https://goo.gl/forms/z75wxjXrNJldKwOw1">Register Here</a>
                     <a class="btn btn-lg btn-danger" href="https://docs.google.com/document/d/e/2PACX-1vTf07F3GS6HuTNS-sXdFewvTwdVf0wUrDEINmC9A3fn1ygsksroIxFtZscrzgtKk9VwTLDM4uhQWFIs/pub">Information for Participants</a>
                     <a class="btn btn-lg btn-danger" href="https://docs.google.com/spreadsheets/d/1wjSfBRJhZSV6MTxoK41kh6HKF8kXrYz29mgxr783Gds/edit?usp=sharing">Register for Mentorship</a>
-                    <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1jiARQaaYd13VPoo04Kbr-sLy-p1fFhkpVM1jFEwEF0Q/edit#slide=id.g254da0057a_0_18">Hacking 101</a>
+                    <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1FUbgWryyTws-vNCw6FQdRaKbYdSo2bJpIuwDvxlKSi0/edit?usp=sharing">Hacking 101</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1im5Fjpxc8oSVwIPt-X2fhX2KavYr6ZHTL2saLrL3Wc0/edit?usp=sharing">Pitched Problems</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/forms/d/e/1FAIpQLSdkmv9B34W5-mvVPdjVbbVekt_Ia3le16Ht73FxlxgDfYqe9A/viewform?usp=sf_link">Register Your Team</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1JTvIgkOp3EkcsiAqXhUgeemgI8m-NZV8sMwjNGOZzFc/edit?usp=sharing">List of Teams</a>
