--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <div class="row">
             <div class="mbr-table-md-up">
               <div class="mbr-table-cell col-md-25 text-xs-center text-md-left">
-                  <h3 class="mbr-section-title display-2"><span style="font-weight: normal;"> Event Sponsor: <strong> Biosay </strong> </span>
+                  <h3 class="mbr-section-title display-2"><span style="font-weight: normal;"> Event Sponsor: <strong> <a href="https://biosay.com/">Biosay</a> </strong> </span>
                   </h3> 
               </div>
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-4">
