--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
                     <div class="mbr-section-btn"><a class="btn btn-lg btn-danger" href="#header3-1"><span class="etl-icon icon-hourglass mbr-iconfont mbr-iconfont-btn"></span>Schedule FRI 09/13/19 - SUN 09/15/19</a> <a class="btn btn-lg btn-danger" href="https://forms.gle/zY4SHifa1HqG6hvm8">RSVP Here</a>
                     <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/forms/d/e/1FAIpQLSc965YPxiZYWzo6LwShHt2Tq_lesqObxF5Ybssek8md_-FhZw/viewform?usp=sf_link">Submit Presentation Draft by 1:00PM</a>
 		<a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/document/d/1NWJ48CM2f9rUgCZ4IiF5aXIAM9HmuyTyBOVQuS2ZVLo/edit"> Pain Points </a>
-		<!-- <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1BHkT6OGp9zvux1KrS7tnHGOFLc5biVOZ5OT3InCpw84/edit?usp=sharing">Pitched Problems</a> -->
-		<!-- <a class="btn btn-lg btn-black-outline btn-black" href="https://app.acuityscheduling.com/schedule.php?owner=18270112"> Mentor Sign Up </a> -->
+		<a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/spreadsheets/d/1BHkT6OGp9zvux1KrS7tnHGOFLc5biVOZ5OT3InCpw84/edit?usp=sharing">Pitched Problems</a>
+		<a class="btn btn-lg btn-black-outline btn-black" href="https://app.acuityscheduling.com/schedule.php?owner=18270112"> Mentor Sign Up </a>
+		<a class="btn btn-lg btn-black-outline btn-black" href="https://forms.gle/yQBK1vZsx58SubTz5"> Team Sign Up </a>
+		<!-- <a class="btn btn-lg btn-black-outline btn-black" href="https://docs.google.com/presentation/d/1S3m6EKISFH3MZQWGR_H0YuJFksf8OEXA7DRRQwkjt-c/edit?usp=sharing"> Hacking 101 </a> -->
+
                 <!-- <a class="btn btn-lg btn-black-outline btn-black" href="https://goo.gl/forms/HDOgYEcS4FRmbxmr1">FEEDBACK FORM</a> -->
 
 
