--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         9:30AM — Breakfast &amp; Check-In<br>
                         10:00 AM - Hack 101<br>
                         10:45AM — Problem Pitching &amp; Team Formation<br>
-                        12:00AM — Working Lunch/Hacking Begins<br>
+                        12:00PM — Working Lunch/Hacking Begins<br>
                         6:00PM - Dinner <br>
                         <i>Hacking Continues</i><br>
                         11:30PM — End of Day 1<br></p>
